--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -17,7 +17,7 @@
       content="https://images.tripadeal.com.au/cdn-cgi/image/format=auto,width=1600/https://cstad.s3.ap-southeast-2.amazonaws.com/4559_Vietnam_Cambodia_WEB_HERO_1.jpg"
     />
 
-    <title>Homepage - Rexburg characters Chamber of Commerce</title>
+    <title>Homepage - Chamber of Commerce and Discover</title>
     <!--favicon-->
     <link rel="icon" href="../chamber/light_bulb.ico" />
     <!--Typography-->
@@ -55,6 +55,9 @@
     </header>
 
     <main>
+      <div id="welcome">
+        <h1>Welcome to Rexburg Chamber of Commerce and Discover</h1>
+      </div>
       <div id="spotlight">
         <img
           class="event_img"
@@ -124,7 +127,7 @@
           <!--weather section-->
           
         </div>
-        <div class="recommend">
+        <!-- <div class="recommend">
           <img
             class="display_img"
             src="images/online-job-search webp.webp"
@@ -239,7 +242,7 @@
               Progressville—an emblem of how a community can flourish when
               guided by a shared love for commerce and a dash of whimsy.
             </p>
-          </div>
+          </div> -->
         </div>
       </div>
     </main>
