change 1 to make more sense

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -56,7 +56,7 @@
 
     <main>
       <div id="welcome">
-        <h1>Welcome to Rexburg Chamber of Commerce and Discover</h1>
+        <h1>Welcome to Rexburg Chamber of Commerce Discover Page</h1>
       </div>
       <div id="spotlight">
         <img
