add chamber discover to the nav

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -49,7 +49,7 @@
         <a href="../index.html">Home</a>
         <a href="index.html">Chamber</a>
         <a href="../week01/chamber-site-plan.html" target="_blank">Site Plan</a>
-        <a href="#">Form</a>
+        <a href="/chamber/discover.html">Chamber Discover</a>
       </nav>
     </header>
 
