add chamber discover to the main page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <a href="index.html">Home</a>
       <a href="./chamber/index.html">Chamber</a>
       <a href="week01/chamber-site-plan.html" target="_blank">Site Plan</a>
-      <a href="#">Form</a>
+      <a href="chamber/discover.html">Chamber Discover</a>
     </nav>
 
     <div class="hero">
