--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <a href="week03/responsive-images.html">Responsive Image</a> |
             <a href="week03/bom.html">BOM-using Local Storage</a>
           </li>
-          <li>Week4: <a href="#">------</a></li>
+          <li>Week4: <a href="https://codepen.io/Ravylim87/pen/rNRgwYP">CSS Pseudo-Classes</a> | <a href="week04/images/Screenshot 2024-02-22 112151.png">CSS Combinators</a> | <a href="week04/tablebuild.html">Table Build</a></li>
           <li>Week5: <a href="#">------</a></li>
           <li>Week6: <a href="#">------</a></li>
         </ul>
