--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -50,8 +50,8 @@
         <a href="../index.html">Home</a>
         <a href="index.html">Chamber</a>
         <a href="../week01/chamber-site-plan.html" target="_blank">Site Plan</a>
-        <a href="#">Form</a>
-      </nav>
+        <a href="/chamber/discover.html">Discover Discover</a>
+      </nav> 
     </header>
 
     <main>
