add margin bottom to fieldset

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       <a href="./chamber/index.html">Chamber</a>
       <a href="week01/chamber-site-plan.html" target="_blank">Site Plan</a>
       <a href="chamber/discover.html">Chamber Discover</a>
+      <a href="form.html">Form</a>
     </nav>
 
     <div class="hero">
