fix error in the meta tag

--- a/form.html
+++ b/form.html
@@ -2,9 +2,11 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <meta author="Ravy Lim">
+  <meta decscription="Fill Up Your Form">
+  <title>Application Form</title>
 </head>
 <!--link to CSS-->
 <link rel="stylesheet" href="styles/normalize.css" />
@@ -32,7 +34,7 @@
     <a href="form.html">Form</a>
   </nav>
   <main>
-    <form method="get" action="form_thanks.html" class="wf1">
+    <form method="get" action="record.html" class="wf1">
       <fieldset>
         <legend>Application Infomation</legend>
         <label>Username* <input type="text" id="username" name="username" required /></label>
