--- a/form.html
+++ b/form.html
@@ -4,8 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta author="Ravy Lim">
-  <meta decscription="Fill Up Your Form">
+  <meta name="author" content="Ravy Lim" >
+  <meta
+      name="description"
+      content="WDD 230 , Ravy Lim, course assignment portal"
+    >
   <title>Application Form</title>
 </head>
 <!--link to CSS-->
