add join us link to other pages

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -50,7 +50,8 @@
         <a href="../index.html">Home</a>
         <a href="index.html">Chamber</a>
         <a href="../week01/chamber-site-plan.html" target="_blank">Site Plan</a>
-        <a href="/chamber/discover.html">Discover Discover</a>
+        <a href="/chamber/discover.html">Chamber Discover</a>
+        <a href="join.html">Join Us</a>
       </nav> 
     </header>
 
@@ -257,7 +258,8 @@
         <a href="../index.html">Home</a>
         <a href="index.html">Chamber</a>
         <a href="../week01/chamber-site-plan.html" target="_blank">Site Plan</a>
-        <a href="#">Form</a>
+        <a href="/chamber/discover.html">Chamber Discover</a>
+        <a href="join.html">Join Us</a>
       </nav>
       <div id="owner">
         <p id="copyright">WDD230 Project | &copy;</p>
