--- a/chamber/join.html
+++ b/chamber/join.html
@@ -43,6 +43,7 @@
     <a href="index.html">Chamber</a>
     <a href="../week01/chamber-site-plan.html" target="_blank">Site Plan</a>
     <a href="/chamber/discover.html">Chamber Discover</a>
+    <a href="join.html">Join Us</a>
   </nav>
 
   <main>
@@ -136,7 +137,8 @@
     <a href="../index.html">Home</a>
     <a href="index.html">Chamber</a>
     <a href="../week01/chamber-site-plan.html" target="_blank">Site Plan</a>
-    <a href="#">Form</a>
+    <a href="/chamber/discover.html">Chamber Discover</a>
+    <a href="join.html">Join Us</a>
   </nav>
   <footer>
     <p id="copyright">WDD230 Project | &copy;</p>
