--- a/chamber/index.html
+++ b/chamber/index.html
@@ -50,6 +50,7 @@
         <a href="index.html">Chamber</a>
         <a href="../week01/chamber-site-plan.html" target="_blank">Site Plan</a>
         <a href="/chamber/discover.html">Chamber Discover</a>
+        <a href="join.html">Join Us</a>
       </nav>
     </header>
 
@@ -309,7 +310,8 @@
         <a href="../index.html">Home</a>
         <a href="index.html">Chamber</a>
         <a href="../week01/chamber-site-plan.html" target="_blank">Site Plan</a>
-        <a href="#">Form</a>
+        <a href="/chamber/discover.html">Chamber Discover</a>
+        <a href="join.html">Join Us</a>
       </nav>
       <div id="owner">
         <p id="copyright">WDD230 Project | &copy;</p>
