alink to join btn in home page

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -65,7 +65,7 @@
       src="images/Rexburg-Temple-air-shot-scaled.webp"
       alt="Happy Business Man"
     />
-    <button id="join_btn">Join Now</button>
+    <button id="join_btn"><a href="join.html">Join Now</a></button>
     <p>
       At Rexburg Chamber of Commerce, our mission is to foster a thriving
       business community by connecting, supporting, and empowering local
@@ -267,7 +267,7 @@
         relevant updates directly to your inbox. Keep your finger on the
         pulse of our Chamber's activities and community news.
       </p>
-      <button id="join_bas">Join Now</button>
+      <button id="join_bas"><a href="join.html">Join Now</a></button>
     </div>
     <div class="premium_membership">
       <h2>Premium Membership:</h2>
@@ -294,7 +294,7 @@
         or other aspects of your business, our Premium Membership ensures
         you receive tailored support.
       </p>
-      <button id="join_prem">Join Now</button>
+      <button id="join_prem"><a href="join.html">Join Now</a></button>
     </div>
   </div>
 </main>
