fix the link to css

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Ubuntu:wght@300&display=swap"
     rel="stylesheet" />
   <!--Link to CSS -->
-  <link rel="stylesheet" href="./styles/normalize.css" />
+  <link rel="stylesheet" href="styles/normalize.css" />
   <link rel="stylesheet" href="./styles/base.css" />
   <link rel="stylesheet" href="./styles/larger.css" />
   <!--Link to JS-->
