--- a/chamber/join.html
+++ b/chamber/join.html
@@ -15,7 +15,7 @@
 
   <title>Homepage - Rexburg characters Chamber of Commerce</title>
   <!--favicon-->
-  <link rel="icon" href="../chamber/light_bulb.ico" />
+  <link rel="icon" href="../form.ico" />
   <!--Typography-->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -60,7 +60,7 @@
         <label>Email* <input type="email" name="email" id="email" required
             title="Please enter a valid email address (e.g., youremail@example.com)"></label>
         <label>Phone Number
-          <input type="telephone" name="telephone" id="telephone" required pattern="[0-9]{2,}" /></label>
+          <input type="tel" name="tel" id="tel" required pattern="[0-9]{2,}" /></label>
         <label>Business/Organization's Name <input type="text" name="business" id="business" required></label>
       </fieldset>
       <fieldset>
