add weather and edit the index in chamber

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -130,7 +130,23 @@
   </div>
   <div id="promote">
     <div class="recommend">
-      <h3>Weather go right here</h3>
+         <!--weather section-->
+         <a class="weatherwidget-io" href="https://forecast7.com/en/43d82n111d79/rexburg/?unit=us" data-label_1="REXBURG"
+         data-label_2="WEATHER" data-theme="gray">REXBURG WEATHER</a>
+       <script>
+         !(function (d, s, id) {
+           var js,
+             fjs = d.getElementsByTagName(s)[0];
+           if (!d.getElementById(id)) {
+             js = d.createElement(s);
+             js.id = id;
+             js.src = "https://weatherwidget.io/js/widget.min.js";
+             fjs.parentNode.insertBefore(js, fjs);
+           }
+         })(document, "script", "weatherwidget-io-js");
+       </script>
+       <!--weather section-->
+ 
     </div>
     <div class="recommend">
       <img
