fix the error in join.html

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -74,60 +74,66 @@
       </fieldset>
       <fieldset>
         <legend>Business/Organization Description:</legend>
-        <textarea id="description" name="description" pattern="^[a-zA-Z\s\-.,'\&quot;:()]{10,}$"
-          title="Please enter at least ten characters consisting of alphabets, spaces, hyphens, and common punctuation marks."
-          required></textarea><br>
+        <textarea id="description" name="description" required></textarea><br>
       </fieldset>
       <input type="hidden" id="timestamp" name="timestamp">
       <input type="submit" value="Join the My Community">
-    </form class="wf3">
-    <form>
+    </form>
+    <form class="wf3">
       <fieldset>
         <legend>Mebership Level Benefits</legend>
         <button type="button" class="collapsible">
           <b>NP Membership is for non profit organizations and there is no fee</b>
         </button>
         <div class="content">
-          <li>Access to networking opportunities with other non-profit organizations.</li>
-          <li>Resources and support tailored specifically for non-profits.</li>
-          <li>Participation in community events and fundraisers.</li>
-          <li>Visibility and recognition within the non-profit community.</li>
-          <li>Access to specialized training and workshops.</li>
-          <li><b>Price:</b> Free (No membership fee).</li>
+          <ul>
+            <li>Access to networking opportunities with other non-profit organizations.</li>
+            <li>Resources and support tailored specifically for non-profits.</li>
+            <li>Participation in community events and fundraisers.</li>
+            <li>Visibility and recognition within the non-profit community.</li>
+            <li>Access to specialized training and workshops.</li>
+            <li><b>Price:</b> Free (No membership fee).</li>
+          </ul>
         </div>
         <button type="button" class="collapsible">
           <b>Bronze Membership</b>
         </button>
         <div class="content">
-          <li>Basic level of access to organization resources and events.</li>
-          <li>Limited networking opportunities.</li>
-          <li>Entry-level support and assistance from the organization.</li>
-          <li>Access to general workshops and training sessions.</li>
-          <li>Recognition as a Bronze-level member in organizational materials.</li>
-          <li><b>Price:</b> Affordable entry-level fee.</li>
+          <ul>
+            <li>Basic level of access to organization resources and events.</li>
+            <li>Limited networking opportunities.</li>
+            <li>Entry-level support and assistance from the organization.</li>
+            <li>Access to general workshops and training sessions.</li>
+            <li>Recognition as a Bronze-level member in organizational materials.</li>
+            <li><b>Price:</b> Affordable entry-level fee.</li>
+          </ul>
         </div>
         <button type="button" class="collapsible">
           <b>Silver Membership</b>
         </button>
         <div class="content">
-          <li>Enhanced access to organization resources, events, and materials.</li>
-          <li>Expanded networking opportunities with other members and industry professionals.</li>
-          <li>Priority support and assistance from the organization's staff.</li>
-          <li>Access to exclusive workshops and training sessions.</li>
-          <li>Recognition as a Silver-level member in organizational materials.</li>
-          <li><b>Price:</b> Moderate membership fee, offering a balance between affordability and added benefits.</li>
+          <ul>
+            <li>Enhanced access to organization resources, events, and materials.</li>
+            <li>Expanded networking opportunities with other members and industry professionals.</li>
+            <li>Priority support and assistance from the organization's staff.</li>
+            <li>Access to exclusive workshops and training sessions.</li>
+            <li>Recognition as a Silver-level member in organizational materials.</li>
+            <li><b>Price:</b> Moderate membership fee, offering a balance between affordability and added benefits.</li>
+          </ul>
         </div>
 
         <button type="button" class="collapsible">
           <b>Gold Membership</b>
         </button>
         <div class="content">
-          <li>Comprehensive access to all organization resources, events, and materials.</li>
-          <li>Extensive networking opportunities with top-tier members and industry leaders.</li>
-          <li>Expedited support and personalized assistance from the organization's experts.</li>
-          <li>Access to premium workshops, training sessions, and mentorship programs.</li>
-          <li>Prominent recognition as a Gold-level member in organizational materials.</li>
-          <li><b>Price:</b> Premium membership fee, offering the highest level of benefits and privileges.</li>
+          <ul>
+            <li>Comprehensive access to all organization resources, events, and materials.</li>
+            <li>Extensive networking opportunities with top-tier members and industry leaders.</li>
+            <li>Expedited support and personalized assistance from the organization's experts.</li>
+            <li>Access to premium workshops, training sessions, and mentorship programs.</li>
+            <li>Prominent recognition as a Gold-level member in organizational materials.</li>
+            <li><b>Price:</b> Premium membership fee, offering the highest level of benefits and privileges.</li>
+          </ul>
         </div>
 
       </fieldset>
