--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             href="week04/tablebuild.html">Table Build</a> | <a href="week04/form-start/Form-start/index.html">Form
             Development</a></li>
         <li>Week5: <a href="https://codepen.io/Ravylim87/pen/ZEZGNQx?editors=1100">CSS Pseudo-elements</a> |
-          <a href="week05/new-ward-members.json">JSON</a> | <a href="week05/prophets.html">The Fetch API</a>
+          <a href="week05/new-ward-members.json">JSON</a> | <a href="week05/prophets.html">The Fetch API</a> | <a href="week05/weather.html">Weather API</a>
         </li>
         <li>Week6: <a href="#">------</a></li>
       </ul>
