--- a/week05/prophets.html
+++ b/week05/prophets.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
 
-    <!-- Link to CSS -->
-    <link rel="stylesheet" href="styles/prophets.css">
-    <link rel="stylesheet" href="styles/prophets_larger.css">
-    <!--Link to JS-->
-    <script src="scripts/prophets.js" defer></script>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Latter-day Prophets</title>
+
+  <!-- Link to CSS -->
+  <link rel="stylesheet" href="styles/prophets.css">
+  <link rel="stylesheet" href="styles/prophets_larger.css">
+  <!--Link to JS-->
+  <script src="scripts/prophets.js" defer></script>
 
 </head>
-<body>
-    <header>
-        <h1>Latter-day Prophets</h1>
-      </header>
-      <main>
-        <div id="cards">
 
-        </div>
-      </main>
-      <footer>
-        Ravy Lim | Latter-day Prophets
-      </footer>
+<body>
+  <header>
+    <h1>Latter-day Prophets</h1>
+  </header>
+  <main>
+    <div id="cards">
+
+    </div>
+  </main>
+  <footer>
+    Ravy Lim | Latter-day Prophets
+  </footer>
 </body>
+
 </html>
