--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
           <a href="#">Js Pen</a>
         </li>
         <li>
-          Week2: <a href="./week02/design.html">Design Principles</a> |
+          Week2: <a href="week02/design.html">Design Principles</a> |
           <a href="https://codepen.io/Ravylim87/pen/poYWpxO">CodePen</a>
-          | <a href="./week02/bom.html">JavaScript: DOM Manipulation</a>
+          | <a href="week02/bom.html">JavaScript: DOM Manipulation</a>
         </li>
         <li>
           Week3: <a href="week03/images/landscrape.webp">WebP</a> |
@@ -92,6 +92,7 @@
     <section class="card">
       <h2>Information</h2>
       <!--weather section-->
+      <h3>Weather In Rexburg</h3>
       <div class="weather-container">
         <img id="weather-icon" src="" alt="">
         <figure>
