--- a/index.html
+++ b/index.html
@@ -31,13 +31,14 @@
   <script src="scripts/darkmode.js" defer></script>
   <script src="scripts/numOfVisit.js" defer></script>
   <script src="scripts/weather.js" defer></script>
+  <script src = "scripts/links.js" defer></script>
 </head>
 
 <body>
   <header>
     <div id="mode">🔆</div>
     <img src="./images/Profile_myPhoto_at_IdahoFall.jpg" alt="Ravy Lim" />
-    <span>Ravy Lim</span>
+    <h1 id="name">Ravy Lim</h1>
     <!--HambergerNavigation-->
     <button id="menu"></button>
   </header>
@@ -60,36 +61,13 @@
 
   <main>
     <h1 class="title">WDD 230: Web Frontend Development</h1>
-    <section class="card">
+    <section class="card1">
       <h2>Learning Activities</h2>
-      <ul>
-        <li>
-          Week1: <a href="#">Layout</a> | <a href="#">Media Query</a> |
-          <a href="#">Js Pen</a>
-        </li>
-        <li>
-          Week2: <a href="week02/design.html">Design Principles</a> |
-          <a href="https://codepen.io/Ravylim87/pen/poYWpxO">CodePen</a>
-          | <a href="week02/bom.html">JavaScript: DOM Manipulation</a>
-        </li>
-        <li>
-          Week3: <a href="week03/images/landscrape.webp">WebP</a> |
-          <a href="week03/lazyload.html">Lazy Load</a> |
-          <a href="week03/responsive-images.html">Responsive Image</a> |
-          <a href="week03/bom.html">BOM-using Local Storage</a>
-        </li>
-        <li>Week4: <a href="https://codepen.io/Ravylim87/pen/rNRgwYP">CSS Pseudo-Classes</a> | <a
-            href="week04/images/Screenshot 2024-02-22 112151.png">CSS Combinators</a> | <a
-            href="week04/tablebuild.html">Table Build</a> | <a href="week04/form-start/Form-start/index.html">Form
-            Development</a></li>
-        <li>Week5: <a href="https://codepen.io/Ravylim87/pen/ZEZGNQx?editors=1100">CSS Pseudo-elements</a> |
-          <a href="week05/new-ward-members.json">JSON</a> | <a href="week05/prophets.html">The Fetch API</a> | <a
-            href="week05/weather.html">Weather API</a>
-        </li>
-        <li>Week6: <a href="#">------</a></li>
+      <ul class="week-list">
+        
       </ul>
     </section>
-    <section class="card">
+    <section class="card2">
       <h2>Information</h2>
       <!--weather section-->
       <h3>Weather In Rexburg</h3>
