add directory link to chamber homepage

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -44,6 +44,7 @@
       <a href="../week01/chamber-site-plan.html" target="_blank">Site Plan</a>
       <a href="/chamber/discover.html">Chamber Discover</a>
       <a href="join.html">Join Us</a>
+      <a href="directory.html">Directory</a>
     </nav>
   </header>
 
