fix all problem

--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -17,7 +17,7 @@
       content="https://images.tripadeal.com.au/cdn-cgi/image/format=auto,width=1600/https://cstad.s3.ap-southeast-2.amazonaws.com/4559_Vietnam_Cambodia_WEB_HERO_1.jpg"
     />
 
-    <title>Homepage - Rexburg characters Chamber of Commerce</title>
+    <title>Thank You</title>
     <!--favicon-->
     <link rel="icon" href="../chamber/light_bulb.ico" />
     <!--Typography-->
