--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -2,18 +2,18 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="WDD 230 , Ravy Lim, course assignment portal" />
-  <meta name="author" content="Ravy Lim" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+  <meta name="description" content="WDD 230 , Ravy Lim, course assignment portal" >
+  <meta name="author" content="Ravy Lim" >
   <!--Social Media Meta Tags-->
-  <meta property="og:title" content="WDD 240 - Homepage" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://udomravylim.github.io/wdd230/" />
+  <meta property="og:title" content="WDD 240 - Homepage" >
+  <meta property="og:type" content="website" >
+  <meta property="og:url" content="https://udomravylim.github.io/wdd230/" >
   <meta property="og:image"
     content="https://images.tripadeal.com.au/cdn-cgi/image/format=auto,width=1600/https://cstad.s3.ap-southeast-2.amazonaws.com/4559_Vietnam_Cambodia_WEB_HERO_1.jpg" />
 
-  <title>Homepage - Rexburg characters Chamber of Commerce</title>
+  <title>Directory</title>
   <!--favicon-->
   <link rel="icon" href="../chamber/light_bulb.ico" />
   <!--Typography-->
