--- a/chamber/join.html
+++ b/chamber/join.html
@@ -13,7 +13,7 @@
   <meta property="og:image"
     content="https://images.tripadeal.com.au/cdn-cgi/image/format=auto,width=1600/https://cstad.s3.ap-southeast-2.amazonaws.com/4559_Vietnam_Cambodia_WEB_HERO_1.jpg" />
 
-  <title>Homepage - Rexburg characters Chamber of Commerce</title>
+  <title>Join</title>
   <!--favicon-->
   <link rel="icon" href="../form.ico" />
   <!--Typography-->
